# Cocos2d-x-3.17.2_uwp

./: README.md  setup.py
cmake/Modules/: CocosConfigDefine.cmake
cocos/: cocos2d.h
cocos/audio/: AudioEngine.cpp  CMakeLists.txt
cocos/audio/emscripten/: AudioEngine-emscripten.cpp  AudioEngine-emscripten.h  SimpleAudioEngine.cpp
cocos/audio/winrt/: Audio.h
cocos/base/: CCConfiguration.cpp  CCController-linux-win32.cpp  CCController.cpp  CCController.h  CMakeLists.txt  ccConfig.h
cocos/base/allocator/: CCAllocatorMutex.h
cocos/network/: CCDownloader-emscripten.cpp  CCDownloader-emscripten.h  CCDownloader.cpp  CMakeLists.txt  HttpClient-emscripten.cpp  HttpClient-emscripten.h
cocos/platform/: CCApplication.h  CCPlatformDefine.h  CCStdC.h  CMakeLists.txt
cocos/platform/desktop/: CCGLViewImpl-desktop.cpp  CCGLViewImpl-desktop.h
cocos/platform/emscripten/: CCApplication-emscripten.cpp  CCApplication-emscripten.h  CCCommon-emscripten.cpp  CCDevice-emscripten.cpp  CCFileUtils-emscripten.cpp  CCFileUtils-emscripten.h  CCGL-emscripten.h  CCPlatformDefine-emscripten.h  CCStdC-emscripten.h  devtools-emscripten.cpp  devtools-emscripten.h
cocos/platform/winrt/: CCFileUtilsWinRT.cpp  CCFileUtilsWinRT.h
cocos/renderer/: CCRenderer.cpp  CCTextureAtlas.cpp
cocos/storage/: CMakeLists.txt
cocos/storage/local-storage/: LocalStorage-emscripten.cpp  LocalStorage.cpp
templates/: cocos2dx_files.json
templates/cpp-template-default/: CMakeLists.txt  cocos-project-template.json
templates/cpp-template-default/proj.win10/: HelloCpp.sln
templates/cpp-template-default/proj.win10/App/: HelloCpp.vcxproj
templates/js-template-default/: CMakeLists.txt
templates/lua-template-default/: CMakeLists.txt
tests/cpp-empty-test/: CMakeLists.txt  index.html
tests/cpp-tests/: CMakeLists.txt
tests/lua-empty-test/: .cocos-project.json
tools/cocos2d-console/: .gitignore
tools/cocos2d-console/plugins/plugin_compile/: project_compile.py
